--- a/app/src/main/res/layout/activity_tv_detail.xml
+++ b/app/src/main/res/layout/activity_tv_detail.xml
@@ -27,7 +27,7 @@
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolBarAtTv"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
+                    android:layout_height="@dimen/x48"
                     app:popupTheme="@style/AppTheme.PopupOverlay"/>
                 <TextView
                     android:id="@+id/movieNameAtTv"
@@ -60,7 +60,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="@dimen/x16"
                     android:layout_marginBottom="@dimen/x16"
-                    android:background="@drawable/white_circle_icon"
+                    android:background="@drawable/white_circle_background"
                     app:icon_type="heart"
                     app:circle_start_color="@color/colorPrimaryDark"
                     app:dots_primary_color="@color/red"
@@ -367,7 +367,7 @@
                         android:layout_marginRight="@dimen/x16"
                         android:fontFamily="sans-serif-condensed"
                         android:drawablePadding="@dimen/x8"
-                        android:drawableRight="@drawable/baseline_person_black_18dp"/>
+                        android:drawableRight="@drawable/person_icon_black"/>
                 </LinearLayout>
             </LinearLayout>
 
