--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/x4"
-        android:layout_marginBottom="@dimen/x4"
+        android:layout_marginBottom="@dimen/x48"
         android:layout_below="@id/fragmentPbAtMv"/>
 
     <LinearLayout
@@ -88,7 +88,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:background="@drawable/retry_background"
+            android:background="@color/colorPrimary"
             android:layout_below="@id/useLessSix"
             android:layout_marginTop="@dimen/x8"
             android:text="@string/tryAgain"
