--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/x176"
-    android:background="@drawable/splash_grad"
+    android:background="@drawable/splash_gradient_background"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <TextView
