--- a/app/src/main/res/layout/trailer_list_item.xml
+++ b/app/src/main/res/layout/trailer_list_item.xml
@@ -7,7 +7,7 @@
 
     <ImageView
         android:id="@+id/trailerImage"
-        android:layout_width="@dimen/x256"
+        android:layout_width="@dimen/x280"
         android:layout_height="@dimen/x220"
         android:scaleType="fitXY"
         android:contentDescription="@string/imageDesc"/>
@@ -16,7 +16,7 @@
         android:layout_width="@dimen/x48"
         android:layout_height="@dimen/x48"
         android:layout_centerInParent="true"
-        android:src="@drawable/youtube"
+        android:background="@drawable/youtube_icon"
         android:scaleType="fitXY"
         android:contentDescription="@string/imageDesc"/>
 </RelativeLayout>
