--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,23 +6,23 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/navMv"
-            android:icon="@drawable/baseline_movie_black_48"
+            android:icon="@drawable/movie_menu_icon"
             android:title="@string/movieStr" />
         <item
             android:id="@+id/navTv"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/tv_menu_icon"
             android:title="@string/tvStr" />
         <item
             android:id="@+id/navFav"
-            android:icon="@drawable/navigation_favorites"
+            android:icon="@drawable/fav_menu_icon"
             android:title="@string/favStr" />
         <item
             android:id="@+id/navSetting"
-            android:icon="@drawable/navigation_settings"
+            android:icon="@drawable/setting_menu_icon"
             android:title="@string/settingStr" />
         <item
             android:id="@+id/navExit"
-            android:icon="@drawable/baseline_arrow_back_white_24"
+            android:icon="@drawable/arrow_back"
             android:title="@string/exitStr" />
     </group>
 
@@ -30,12 +30,12 @@
         <menu>
             <item
                 android:id="@+id/navShare"
-                android:icon="@drawable/ic_menu_share"
+                android:icon="@drawable/share_menu_icon"
                 android:title="@string/shareStr" />
             <item
                 android:id="@+id/navRate"
                 android:title="@string/rateStr"
-                android:icon="@drawable/baseline_star_black_48"/>
+                android:icon="@drawable/rating_menu_icon"/>
         </menu>
     </item>
 
