--- a/app/src/main/res/layout/activity_cast_profile.xml
+++ b/app/src/main/res/layout/activity_cast_profile.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".CastProfileAct"
     android:background="@color/white"
     tools:ignore="Overdraw">
@@ -19,7 +20,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/x220"
                 android:layout_marginTop="@dimen/x16"
-                android:contentDescription="@string/imageDesc"/>
+                android:transitionName="@string/curve_transition_cast"
+                android:contentDescription="@string/imageDesc"
+                app:civ_border_width="@dimen/x1"
+                app:civ_border_color="@color/black"/>
 
             <LinearLayout
                 android:id="@+id/profileUselessOne"
