--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MovieDetailAct">
+    tools:context=".ListAct">
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -19,17 +19,43 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white">
-                <ImageView
-                    android:id="@+id/posterImageAtMovieDetail"
+
+
+                <FrameLayout
+                    android:id="@+id/posterFrameAtMv"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/x256"
-                    android:contentDescription="@string/imageDesc"
-                    android:scaleType="fitXY" />
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:id="@+id/posterImageAtMovieDetail"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/x256"
+                        android:contentDescription="@string/imageDesc"
+                        android:scaleType="fitXY" />
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/x256"
+                        android:background="@drawable/scrim_back_poster"/>
+                </FrameLayout>
+
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolBarATMovieDetail"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/x48"
-                    app:popupTheme="@style/AppTheme.PopupOverlay"/>
+                    app:popupTheme="@style/AppTheme.PopupOverlay">
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <ImageView
+                            android:id="@+id/shareBtnAtMovieDetail"
+                            android:layout_width="@dimen/x22"
+                            android:layout_height="@dimen/x22"
+                            android:src="@drawable/share_menu_icon"
+                            android:layout_marginTop="@dimen/x12"
+                            android:layout_alignParentRight="true"
+                            android:layout_marginRight="@dimen/x16"
+                            android:contentDescription="@string/imageDesc"/>
+                    </RelativeLayout>
+                </android.support.v7.widget.Toolbar>
                 <TextView
                     android:id="@+id/movieNameAtMovieDetail"
                     android:layout_width="match_parent"
@@ -38,7 +64,10 @@
                     android:textColor="@color/black"
                     android:textSize="@dimen/xs22"
                     android:textStyle="bold"
-                    android:layout_below="@id/posterImageAtMovieDetail"
+                    android:singleLine="true"
+                    android:ellipsize="marquee"
+                    android:elevation="@dimen/x8"
+                    android:layout_below="@id/posterFrameAtMv"
                     android:paddingTop="@dimen/x8"
                     android:paddingLeft="@dimen/x16"/>
                 <TextView
@@ -49,7 +78,9 @@
                     android:textSize="@dimen/xs16"
                     android:layout_below="@id/movieNameAtMovieDetail"
                     android:paddingBottom="@dimen/x8"
-                    android:paddingLeft="@dimen/x16"/>
+                    android:paddingLeft="@dimen/x16"
+                    android:singleLine="true"
+                    android:ellipsize="marquee"/>
                 <com.like.LikeButton
                     android:id="@+id/movieFavBtn"
                     android:layout_width="@dimen/x64"
@@ -81,6 +112,7 @@
                     app:cardUseCompatPadding="true"
                     android:background="@color/grey">
                     <android.support.v7.widget.CardView
+                        android:id="@+id/detailCardAtMv"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:cardCornerRadius="@dimen/x12"
@@ -102,6 +134,7 @@
                                 android:layout_weight="1"
                                 android:scaleType="fitXY"
                                 android:contentDescription="@string/imageDesc"
+                                android:transitionName="@string/curve_transition_poster"
                                 android:layout_marginBottom="@dimen/x12"/>
 
                             <LinearLayout
