--- a/app/src/main/res/layout/creater_list_item.xml
+++ b/app/src/main/res/layout/creater_list_item.xml
@@ -13,6 +13,7 @@
         android:layout_marginRight="@dimen/x16"
         android:layout_marginTop="@dimen/x8"
         android:layout_marginBottom="@dimen/x4"
+        android:transitionName="@string/curve_transition_cast"
         app:civ_border_color="@color/black"
         app:civ_border_width="@dimen/x1"/>
 
