--- a/app/src/main/res/layout/fragment_tv.xml
+++ b/app/src/main/res/layout/fragment_tv.xml
@@ -38,7 +38,8 @@
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:layout_marginRight="@dimen/x4"
-            android:visibility="invisible"/>
+            android:visibility="invisible"
+            android:foreground="@drawable/ripple_effect"/>
         <TextView
             android:id="@+id/showPageNoAtTv"
             android:layout_width="match_parent"
@@ -62,7 +63,8 @@
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:layout_marginLeft="@dimen/x4"
-            android:visibility="invisible"/>
+            android:visibility="invisible"
+            android:foreground="@drawable/ripple_effect"/>
     </LinearLayout>
 
     <RelativeLayout
@@ -81,7 +83,7 @@
             android:textAllCaps="false"
             android:textStyle="italic"
             android:fontFamily="cursive"
-            android:id="@+id/useLessSix"/>
+            android:id="@+id/useLessSix" />
         <Button
             android:id="@+id/retryAtTv"
             android:layout_width="wrap_content"
@@ -92,7 +94,8 @@
             android:layout_marginTop="@dimen/x8"
             android:text="@string/tryAgain"
             android:textColor="@color/white"
-            android:textAllCaps="false"/>
+            android:textAllCaps="false"
+            android:foreground="@drawable/ripple_effect"/>
     </RelativeLayout>
 
 </RelativeLayout>
