--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,23 +3,26 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:id="@+id/root">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="@dimen/x6"
-        app:cardElevation="@dimen/x2"
-        app:cardPreventCornerOverlap="true"
-        app:cardUseCompatPadding="true">
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardListItem"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="@dimen/x6"
+            app:cardElevation="@dimen/x2"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true">
 
         <ImageView
             android:id="@+id/posterImageMovieList"
             android:layout_width="match_parent"
             android:layout_height="@dimen/x260"
             android:scaleType="fitXY"
-            android:contentDescription="@string/imageDesc"/>
+            android:contentDescription="@string/imageDesc"
+            android:transitionName="@string/curve_transition_poster" />
 
-    </android.support.v7.widget.CardView>
+        </android.support.v7.widget.CardView>
 
 </FrameLayout>
